chore: fix spacing

--- a/_sass/klise/_base.scss
+++ b/_sass/klise/_base.scss
@@ -176,6 +176,7 @@ ol {
 ul,
 ol {
   margin-top: 0;
+  margin-left: $spacing-full;
 }
 
 li {
